--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mantine/core": "6.0.0",
     "@mantine/hooks": "6.0.0",
     "@mantine/next": "6.0.0",
+    "lodash": "^4.17.21",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.196",
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
